fix: overlaping of elements

--- a/src/bootstrap/app.scss
+++ b/src/bootstrap/app.scss
@@ -23,7 +23,6 @@ body,
 #router-root,
 #scroll-root {
   border: 0;
-  height: 100%;
   margin: 0;
   padding: 0;
   width: 100%;
