--- a/src/containers/nav-bar/nav-bar.scss
+++ b/src/containers/nav-bar/nav-bar.scss
@@ -9,7 +9,7 @@
   justify-content: center;
   left: 0;
   padding: 0 2.4%;
-  position: absolute;
+  position: fixed;
   top: 0;
   width: 100%;
   z-index: 999;
